src/test/ui/rfc1598-generic-associated-types/generic-associated-types-where.stderr
error: cannot continue compilation due to previous error

error[E0244]: wrong number of type arguments: expected 0, found 1
  --> $DIR/generic-associated-types-where.rs:32:35
   |
32 |     type WithDefault<'a, T> = &'a Iterator<T>;
   |                                   ^^^^^^^^^^^ expected no type arguments

error[E0191]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) must be specified
  --> $DIR/generic-associated-types-where.rs:32:35
   |
32 |     type WithDefault<'a, T> = &'a Iterator<T>;
   |                                   ^^^^^^^^^^^ missing associated type `Item` value

